<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stunky\'s GPS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="group_name">Group Name</string>
    <string name="drawing_name">Drawing Name</string>
    <string name="black_button">Black</string>
    <string name="brown_button">Brown</string>
    <string name="purple_button">Purple</string>
    <string name="color_picker">Color Picker</string>
    <string name="pen_up">Pen Up</string>
    <string name="pen_down">Pen Down</string>
    <string name="upload">Upload</string>
    <string name="position">Position</string>
    <string name="buffer_size">Buffer Size</string>
    <string name="location">Not Available</string>
    <string name="buffer">Not Available</string>
    
    

</resources>
